--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ dependencies = [
     "pyzmq==27.1.0",
     "requests==2.32.5",
     "rich==14.2.0",
+    "ruff>=0.14.6",
     "safehttpx==0.1.7",
     "semantic-version==2.10.0",
     "shellingham==1.5.4",
