--- a/requirements.txt
+++ b/requirements.txt
@@ -18,24 +18,24 @@ ffmpy==1.0.0
 filelock==3.20.0
 fsspec==2025.10.0
 gradio==6.0.1
-gradio_client==2.0.0
+gradio-client==2.0.0
 groovy==0.1.2
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
-huggingface_hub==1.1.5
+huggingface-hub==1.1.5
 idna==3.11
 ipykernel==7.1.0
 ipython==9.7.0
-ipython_pygments_lexers==1.1.1
+ipython-pygments-lexers==1.1.1
 jedi==0.19.2
-Jinja2==3.1.6
+jinja2==3.1.6
 jiter==0.12.0
-jupyter_client==8.6.3
-jupyter_core==5.9.1
+jupyter-client==8.6.3
+jupyter-core==5.9.1
 markdown-it-py==4.0.0
-MarkupSafe==3.0.3
+markupsafe==3.0.3
 matplotlib-inline==0.2.1
 mdurl==0.1.2
 nest-asyncio==1.6.0
@@ -48,21 +48,22 @@ parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
 platformdirs==4.5.0
-prompt_toolkit==3.0.52
+prompt-toolkit==3.0.52
 psutil==7.1.3
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.3
 pydantic==2.12.4
-pydantic_core==2.41.5
+pydantic-core==2.41.5
 pydub==0.25.1
-Pygments==2.19.2
+pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.3
+pyyaml==6.0.3
 pyzmq==27.1.0
 requests==2.32.5
 rich==14.2.0
+ruff==0.14.6
 safehttpx==0.1.7
 semantic-version==2.10.0
 shellingham==1.5.4
@@ -76,8 +77,8 @@ tqdm==4.67.1
 traitlets==5.14.3
 typer==0.20.0
 typer-slim==0.20.0
+typing-extensions==4.15.0
 typing-inspection==0.4.2
-typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uv==0.9.13
